--- a/login.html
+++ b/login.html
@@ -7,6 +7,9 @@
     <title>Login</title>
 </head>
 <body>
-    <input type = "text">
+    <input type = "text"><br>
+    <input type ="radio" name=gender >
+    <option>Male</option>
+        hello bro
 </body>
 </html>
